Modified minima theme

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -24,3 +24,9 @@
     color: $grey-color-dark;
   }
 }
+
+.line-bottom {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: $grey-color-light;
+}
