--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -15,11 +15,11 @@ layout: default
           <span class="p-author h-card" itemprop="name">{{ page.author }}</span>
         </span>
       {%- endif -%}
-      {%- if page.categories -%}
-        • {% for category in page.categories %}
-          <a href="{{site.baseurl}}/categories/#{{category | slugize}}">
+      {%- if page.tags -%}
+        • {% for tag in page.tags %}
+          <a href="{{site.baseurl}}/archive/#{{tag | slugize}}">
             <span itemprop="category" itemscope itemtype="http://schema.org/Category">
-              <span class="h-card" itemprop="name">{{ category }}</span>
+              <span class="h-card" itemprop="name">{{ tag }}</span>
             </span>
           </a>
           {%- if forloop.last == false %}, {% endif -%}
