Blog styling and categories setup

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-
   <header class="post-header">
+    {%- if page.image -%}
+      <div class="post-title-img">
+        <img src={{page.image}}></img>
+      </div>
+    {%- endif -%}
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
