--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -16,26 +16,34 @@ layout: default
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">
-          {{ post.date | date: date_format }}
-          {%- if post.tags -%}
-              {% for tag in post.tags %}
-              <a href="{{site.baseurl}}/archive/#{{tag | slugize}}">
-                  <span>#{{ tag }}</span>
-              </a>
-              {%- if forloop.last == false %}, {% endif -%}
-            {% endfor %}
+        <div class="post-list-item">
+          <div class="post-list-img">
+          {%- if post.image -%}
+            <img src={{post.image}} class="post-list-img"></img>
           {%- endif -%}
-        </span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          <i>{{ post.excerpt }}</i>
-        {%- endif -%}
+          </div>
+          <div>
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          <span class="post-meta">
+            {{ post.date | date: date_format }}
+            {%- if post.tags -%}
+                {% for tag in post.tags %}
+                <a href="{{site.baseurl}}/archive/#{{tag | slugize}}">
+                    <span>#{{ tag }}</span>
+                </a>
+              {% endfor %}
+            {%- endif -%}
+          </span>
+          <h3>
+            <a class="post-link" href="{{ post.url | relative_url }}">
+              {{ post.title | escape }}
+            </a>
+          </h3>
+          {%- if site.show_excerpts -%}
+            <i>{{ post.excerpt }}</i>
+          {%- endif -%}
+          </div>
+        </div>
       </li><br/>
       {%- endfor -%}
     </ul>
