--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
             {{ post.date | date: date_format }}
             {%- if post.tags -%}
                 {% for tag in post.tags %}
-                <a href="{{site.baseurl}}/archive/#{{tag | slugize}}">
+                <a href="{{site.baseurl}}/archive.html#{{tag | slugize}}">
                     <span>#{{ tag }}</span>
                 </a>
               {% endfor %}
