--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-site-verification" content="0wHdDoBAQNqUu-hvKXN_eBJlpOsqL4ajlPahOPZVpdI">
+  <meta name="google-site-verification" content="sfjqX1ah25Pe0CGKmcF6B1eHcwrowxhyo04-rsQcKDc" />
   {%- seo -%}
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="stylesheet" href="{{ "/assets/emmamain.css" | relative_url }}">
