--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -23,10 +23,9 @@ layout: default
         • {% for tag in page.tags %}
           <a href="{{site.baseurl}}/archive.html#{{tag | slugize}}">
             <span itemprop="category" itemscope itemtype="http://schema.org/Category">
-              <span class="h-card" itemprop="name">{{ tag }}</span>
+              <span class="h-card" itemprop="name">#{{ tag }}</span>
             </span>
           </a>
-          {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
       {%- endif -%}
     </p>
