--- a/docs/_layouts/project.html
+++ b/docs/_layouts/project.html
@@ -1,20 +1,15 @@
 ---
-layout: default
+layout: page
 ---
 
-<div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+{{ content }}
 
-  {{ content }}
-
-  <br/>
-
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading line-bottom">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
+<h2 class="post-list-heading line-bottom">{{ page.list_title | default: "Posts" }}</h2>
+<div id="projects-list">
+  <ul class="post-list">
+    {% assign page_category = page.categories | first %}
+    {% for post in site.posts %}
+      {% if post.categories contains page_category %}
       <li>
         <div class="post-list-item">
           <div class="post-list-img">
@@ -48,9 +43,7 @@ layout: default
           </div>
         </div>
       </li><br/>
-      {%- endfor -%}
-    </ul>
-
-  {%- endif -%}
-
+      {% endif %}
+    {% endfor %}
+  </ul>
 </div>
