--- a/docs/assets/emmamain.scss
+++ b/docs/assets/emmamain.scss
@@ -19,8 +19,8 @@
   }
 
   li {
-    margin-bottom: 0;
-    padding-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit / 2;
+    padding-bottom: $spacing-unit / 2;
     border-bottom-width: 1px;
     border-bottom-style: dotted;
     border-bottom-color: $grey-color-light;
