Added summary and TOCs to posts

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -29,6 +29,9 @@ layout: default
         {% endfor %}
       {%- endif -%}
     </p>
+    {%- if page.summary -%}
+      <em>{{ page.summary }}</em>
+    {%- endif -%}
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
